<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <EditText
            android:id="@+id/etSearchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/butSearch"
            android:ems="10" />

        <Button
            android:id="@+id/butSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/search" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvSearchIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchIn"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgSearchIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/currentDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/currentDir"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/allDir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/allDir"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvFileType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cbNotCaseSensitive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/notCaseSensitive"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cdAllFolders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/all"
        android:textSize="18sp" />

</LinearLayout>